--- a/search/index.html
+++ b/search/index.html
@@ -21,6 +21,12 @@
 
                 </div>
         </div>
+        <div id="error-loading">
+            <div class="error-text">
+                <h1 class="error-title"> Uh Oh!</h1>
+                <p class="error-body">Looks like the Explorer is out of date!</p>
+            </div>
+        </div>
     </body>
 
 </html>
