Credits Page & Google Verif.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="style.css">
+    <title>S&box Explorer | Home</title>
     <script src="content.js"></script>
     </head>
     <body>
         <div class="header">
             <img class="header-logo" src="./images/s& logo.png"><a class="header-title" href="#">S&box Explorer</a>
-            <div class="search-controls">
-                <input class="search-bar"></input>
-                <button class="search-button" onclick="alert('This Feature is still a work in progress. Sorry!')"></button>
-            </div>
+            <div class="header-toolcontainer"><a href="./credits/">Credits</a></div>
         </div>
         <div id="content">
 
