--- a/search/index.html
+++ b/search/index.html
@@ -6,11 +6,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Bangers&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="../style.css">
+    <title>S&box Explorer | Search</title>
     <script src="content.js"></script>
     </head>
     <body>
         <div class="header">
             <img class="header-logo" src="../images/s& logo.png"><a class="header-title" href="../">S&box Explorer</a>
+            <div class="header-toolcontainer"></div>
             <div class="search-controls">
                 <input class="search-bar"></input>
                 <button class="search-button" onclick="alert('This Feature is still a work in progress. Sorry!')"></button>
