Remove Search bar from page
Replace with Credits

--- a/search/index.html
+++ b/search/index.html
@@ -12,11 +12,7 @@
     <body>
         <div class="header">
             <img class="header-logo" src="../images/s& logo.png"><a class="header-title" href="../">S&box Explorer</a>
-            <div class="header-toolcontainer"></div>
-            <div class="search-controls">
-                <input class="search-bar"></input>
-                <button class="search-button" onclick="alert('This Feature is still a work in progress. Sorry!')"></button>
-            </div>
+            <div class="header-toolcontainer"><a href="../credits/">Credits</a></div>
         </div>
         <div id="search-result">
             <div id="search-content">
