Share links (Epic Discord Embed)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta property="og:title" content="Test Example | Sbox Explorer">   
     <link rel="icon" href="./images/s& logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
