--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta property="og:title" content="Test Example | Sbox Explorer">   
+        <meta property="og:title" content="Sbox Explorer">
+        <meta property="og:description" content="Explore the S&box API">  
+        <meta property="og:site_name" content="By Insert Name">    
     <link rel="icon" href="./images/s& logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
