Search Bar added (scuffed)
With the search bar I also had to add a few precautions incase the project didn't have a logo, or there were no search results

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     </head>
     <body>
         <div class="header">
-            <img class="header-logo" src="./images/s& logo.png"><a class="header-title" href="#">S&box Explorer</a>
-            <div class="header-toolcontainer"><a href="./credits/">Credits</a></div>
+            <img class="header-logo" src="./images/s& logo.png"><a class="header-title" href="?">S&box Explorer</a>
+            <div class="header-toolcontainer">
+                <input id="search-bar">
+                <button id="search-button" onclick="Search();"></button>
+                <a class="header-tool" href="./credits/">Credits</a>
+            </div>
         </div>
         <div id="content">
 
