--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,11 @@
     <body>
         <div class="header">
             <img class="header-logo" src="../images/s& logo.png"><a class="header-title" href="../">S&box Explorer</a>
-            <div class="header-toolcontainer"><a href="../credits/">Credits</a></div>
+            <div class="header-toolcontainer">
+                <input id="search-bar">
+                <button id="search-button" onclick="Search();"></button>
+                <a href="../credits/">Credits</a>
+            </div>
         </div>
         <div id="search-result">
             <div id="search-content">
