Push search bar to other end points

--- a/credits/index.html
+++ b/credits/index.html
@@ -12,7 +12,11 @@
     <body style="background: url(https://files.facepunch.com/garry/77dafb40-9a3e-4af5-9f2c-a76c2bb3c76d.jpg);">
         <div class="header">
             <img class="header-logo" src="../images/s& logo.png"><a class="header-title" href="../index.html">S&box Explorer</a>
-            <div class="header-toolcontainer"><a href="#">Credits</a></div>
+            <div class="header-toolcontainer">
+                <input id="search-bar">
+                <button id="search-button" onclick="Search();"></button>
+                <a href="#">Credits</a>
+            </div>
         </div>
         <div class="credits-content">
             <h1 class="package-title package-name">Credits</h1>
