Sort By - Header Item
Change sort by methods

--- a/credits/index.html
+++ b/credits/index.html
@@ -13,8 +13,9 @@
         <div class="header">
             <img class="header-logo" src="../images/s& logo.png"><a class="header-title" href="../index.html">S&box Explorer</a>
             <div class="header-toolcontainer">
-                <input id="search-bar">
-                <button id="search-button" onclick="Search();"></button>
+                <form id="search-form" class="search-form">
+                <input id="search-bar" placeholder="Search All Games..">
+                </form>
                 <a href="#">Credits</a>
             </div>
         </div>
