--- a/search/index.html
+++ b/search/index.html
@@ -13,8 +13,9 @@
         <div class="header">
             <img class="header-logo" src="../images/s& logo.png"><a class="header-title" href="../">S&box Explorer</a>
             <div class="header-toolcontainer">
-                <input id="search-bar">
-                <button id="search-button" onclick="Search();"></button>
+                <form id="search-form" class="search-form">
+                    <input id="search-bar" placeholder="Search All Games..">
+                </form>
                 <a href="../credits/">Credits</a>
             </div>
         </div>
